@@ -38,8 +38,11 @@ import org.awaitility.core.ConditionFactory;
 import org.eclipse.hawkbit.exception.SpServerError;
 import org.eclipse.hawkbit.mgmt.rest.api.MgmtRestConstants;
 import org.eclipse.hawkbit.mgmt.rest.resource.mapper.MgmtRestModelMapper;
+import org.eclipse.hawkbit.repository.DistributionSetManagement;
 import org.eclipse.hawkbit.repository.RolloutGroupManagement;
 import org.eclipse.hawkbit.repository.RolloutManagement;
+import org.eclipse.hawkbit.repository.RolloutManagement.Create;
+import org.eclipse.hawkbit.repository.RolloutManagement.GroupCreate;
 import org.eclipse.hawkbit.repository.exception.AssignmentQuotaExceededException;
 import org.eclipse.hawkbit.repository.model.Action;
 import org.eclipse.hawkbit.repository.model.Action.Status;
@@ -90,6 +93,8 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
     private RolloutGroupManagement rolloutGroupManagement;
     @Autowired
     private RolloutTestApprovalStrategy approvalStrategy;
+    @Autowired
+    private DistributionSetManagement distributionSetManagement;
 
     /**
      * Handles the GET request of retrieving a single rollout.
@@ -105,12 +110,11 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
             final DistributionSet dsA = testdataFactory.createDistributionSet("");
             // create a running rollout for the created targets
             final Rollout rollout = rolloutManagement.create(
-                    entityFactory
-                            .rollout()
-                            .create()
+                    Create.builder()
                             .name("rollout1")
-                            .distributionSetId(dsA.getId())
-                            .targetFilterQuery("controllerId==rollout*"),
+                            .distributionSet(dsA)
+                            .targetFilterQuery("controllerId==rollout*")
+                            .build(),
                     4, false, new RolloutGroupConditionBuilder().withDefaults()
                             .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -135,7 +139,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
     void getRolloutDeployGroupTargetsWithParameters() throws Exception {
         testdataFactory.createTargets(4, "rollout", "description");
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
-        final Rollout rollout = createRollout("rollout1", 2, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 2, dsA, "controllerId==rollout*");
         final RolloutGroup firstRolloutGroup = rolloutGroupManagement
                 .findByRollout(rollout.getId(), PageRequest.of(0, 1)).getContent().get(0);
 
@@ -157,7 +161,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         try {
             testdataFactory.createTargets(4, "rollout", "description");
             final DistributionSet dsA = testdataFactory.createDistributionSet("");
-            final Rollout rollout = createRollout("rollout1", 3, dsA.getId(), "controllerId==rollout*", false);
+            final Rollout rollout = createRollout("rollout1", 3, dsA, "controllerId==rollout*", false);
             mvc.perform(post(MgmtRestConstants.ROLLOUT_V1_REQUEST_MAPPING + "/{rolloutId}/approve", rollout.getId())
                             .accept(MediaTypes.HAL_JSON_VALUE))
                     .andDo(MockMvcResultPrinter.print())
@@ -176,7 +180,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         try {
             testdataFactory.createTargets(4, "rollout", "description");
             final DistributionSet dsA = testdataFactory.createDistributionSet("");
-            final Rollout rollout = createRollout("rollout1", 3, dsA.getId(), "controllerId==rollout*", false);
+            final Rollout rollout = createRollout("rollout1", 3, dsA, "controllerId==rollout*", false);
             mvc.perform(post(MgmtRestConstants.ROLLOUT_V1_REQUEST_MAPPING + "/{rolloutId}/deny", rollout.getId())
                             .accept(MediaTypes.HAL_JSON_VALUE))
                     .andDo(MockMvcResultPrinter.print())
@@ -197,7 +201,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final String remark = "Some remark";
         testdataFactory.createTargets(amountTargets, "rollout");
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
-        final Rollout rollout = createRollout("rollout1", 3, dsA.getId(), "controllerId==rollout*", false);
+        final Rollout rollout = createRollout("rollout1", 3, dsA, "controllerId==rollout*", false);
 
         rolloutHandler.handleAll();
 
@@ -459,11 +463,9 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final float percentTargetsInGroup1 = 20;
         final float percentTargetsInGroup2 = 100;
 
-        final List<RolloutGroup> rolloutGroups = Arrays.asList(
-                entityFactory.rolloutGroup().create().name("Group1").description("Group1desc")
-                        .targetPercentage(percentTargetsInGroup1).build(),
-                entityFactory.rolloutGroup().create().name("Group2").description("Group2desc")
-                        .targetPercentage(percentTargetsInGroup2).build());
+        final List<GroupCreate> rolloutGroups = List.of(
+                GroupCreate.builder().name("Group1").description("Group1desc").targetPercentage(percentTargetsInGroup1).build(),
+                GroupCreate.builder().name("Group2").description("Group2desc").targetPercentage(percentTargetsInGroup2).build());
 
         final RolloutGroupConditions rolloutGroupConditions = new RolloutGroupConditionBuilder().withDefaults().build();
 
@@ -572,11 +574,9 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final int amountTargets = 10;
         testdataFactory.createTargets(amountTargets, "ro-target", "rollout");
 
-        final List<RolloutGroup> rolloutGroups = Arrays.asList(
-                entityFactory.rolloutGroup().create().name("Group1").description("Group1desc").targetPercentage(0F)
-                        .build(),
-                entityFactory.rolloutGroup().create().name("Group2").description("Group2desc").targetPercentage(100F)
-                        .build());
+        final List<GroupCreate> rolloutGroups = List.of(
+                GroupCreate.builder().name("Group1").description("Group1desc").targetPercentage(0F).build(),
+                GroupCreate.builder().name("Group2").description("Group2desc").targetPercentage(100F).build());
 
         final RolloutGroupConditions rolloutGroupConditions = new RolloutGroupConditionBuilder().withDefaults().build();
 
@@ -600,11 +600,9 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final int amountTargets = 10;
         testdataFactory.createTargets(amountTargets, "ro-target", "rollout");
 
-        final List<RolloutGroup> rolloutGroups = Arrays.asList(
-                entityFactory.rolloutGroup().create().name("Group1").description("Group1desc").targetPercentage(1F)
-                        .build(),
-                entityFactory.rolloutGroup().create().name("Group2").description("Group2desc").targetPercentage(101F)
-                        .build());
+        final List<GroupCreate> rolloutGroups = List.of(
+                GroupCreate.builder().name("Group1").description("Group1desc").targetPercentage(1F).build(),
+                GroupCreate.builder().name("Group2").description("Group2desc").targetPercentage(101F).build());
 
         final RolloutGroupConditions rolloutGroupConditions = new RolloutGroupConditionBuilder().withDefaults().build();
 
@@ -627,12 +625,11 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
         // create a running rollout for the created targets
         final Rollout rollout = rolloutManagement.create(
-                entityFactory
-                        .rollout()
-                        .create()
+                Create.builder()
                         .name("rollout1")
-                        .distributionSetId(dsA.getId())
-                        .targetFilterQuery("controllerId==rollout*"),
+                        .distributionSet(dsA)
+                        .targetFilterQuery("controllerId==rollout*")
+                        .build(),
                 4, false, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -669,8 +666,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
 
         // create rollout including the created targets with prefix 'rollout'
         final Rollout rollout = rolloutManagement.create(
-                entityFactory.rollout().create().name("rollout1").distributionSetId(dsA.getId())
-                        .targetFilterQuery("controllerId==rollout*"),
+                Create.builder().name("rollout1").distributionSet(dsA).targetFilterQuery("controllerId==rollout*").build(),
                 4, false, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -690,8 +686,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
 
         // create a running rollout for the created targets
         final Rollout rollout = rolloutManagement.create(
-                entityFactory.rollout().create().name("rollout1").distributionSetId(dsA.getId())
-                        .targetFilterQuery("controllerId==rollout*"),
+                Create.builder().name("rollout1").distributionSet(dsA).targetFilterQuery("controllerId==rollout*").build(),
                 4, false, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -730,18 +725,16 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
     @Test
     void retrieveRolloutListFullRepresentationWithFilter() throws Exception {
         testdataFactory.createTargets(20, "rollout", "rollout");
-        final DistributionSet dsA = testdataFactory.createDistributionSet("");
+        final DistributionSet dsA = testdataFactory.createDistributionSetLocked("");
 
         // create a running rollout for the created targets
         final Rollout rollout = rolloutManagement.create(
-                entityFactory.rollout().create().name("rollout1").distributionSetId(dsA.getId())
-                        .targetFilterQuery("controllerId==rollout*"),
+                Create.builder().name("rollout1").distributionSet(dsA).targetFilterQuery("controllerId==rollout*").build(),
                 4, false, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
         rolloutManagement.create(
-                entityFactory.rollout().create().name("rollout2").distributionSetId(dsA.getId())
-                        .targetFilterQuery("controllerId==rollout*"),
+                Create.builder().name("rollout2").distributionSet(dsA).targetFilterQuery("controllerId==rollout*").build(),
                 4, false, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -789,8 +782,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
 
         // create rollout including the created targets with prefix 'rollout'
         final Rollout rollout = rolloutManagement.create(
-                entityFactory.rollout().create().name("rollout1").distributionSetId(dsA.getId())
-                        .targetFilterQuery("controllerId==rollout*"),
+                Create.builder().name("rollout1").distributionSet(dsA).targetFilterQuery("controllerId==rollout*").build(),
                 4, false, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -887,11 +879,9 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
 
         final RolloutGroupConditions rolloutGroupConditions = new RolloutGroupConditionBuilder().withDefaults().build();
 
-        final List<String> rolloutGroups = Arrays.asList(
-                JsonBuilder.rolloutGroup("Group1", "Group1desc", null, percentTargetsInGroup1, false,
-                        rolloutGroupConditions),
-                JsonBuilder.rolloutGroup("Group2", "Group1desc", null, percentTargetsInGroup2, null,
-                        rolloutGroupConditions));
+        final List<String> rolloutGroups = List.of(
+                JsonBuilder.rolloutGroup("Group1", "Group1desc", null, percentTargetsInGroup1, false, rolloutGroupConditions),
+                JsonBuilder.rolloutGroup("Group2", "Group1desc", null, percentTargetsInGroup2, null, rolloutGroupConditions));
 
         mvc.perform(post("/rest/v1/rollouts")
                         .content(JsonBuilder.rollout("rollout2", "desc", null, dsA.getId(), "id==ro-target*",
@@ -1040,7 +1030,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         }
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*",
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*",
                 confirmationRequired);
 
         // retrieve rollout groups from created rollout
@@ -1077,14 +1067,11 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         // setup
         final int amountTargets = 8;
         testdataFactory.createTargets(amountTargets, "rollout", "rollout");
-        final DistributionSet dsA = testdataFactory.createDistributionSet("");
+        final DistributionSet dsA = testdataFactory.createDistributionSetLocked("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout1 = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*",
-                false);
-
-        final Rollout rollout2 = createRollout("rollout2", 1, dsA.getId(), "controllerId==rollout*",
-                false);
+        final Rollout rollout1 = createRollout("rollout1", 4, dsA, "controllerId==rollout*",false);
+        final Rollout rollout2 = createRollout("rollout2", 1, dsA, "controllerId==rollout*", false);
 
         rolloutManagement.start(rollout1.getId());
         rolloutManagement.start(rollout2.getId());
@@ -1111,7 +1098,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*");
 
         // starting rollout
         mvc.perform(post("/rest/v1/rollouts/{rolloutId}/start", rollout.getId()))
@@ -1149,7 +1136,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*");
 
         // starting rollout
         mvc.perform(post("/rest/v1/rollouts/{rolloutId}/start", rollout.getId()))
@@ -1184,7 +1171,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*");
 
         // starting rollout
         mvc.perform(post("/rest/v1/rollouts/{rolloutId}/start", rollout.getId()))
@@ -1224,7 +1211,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*");
 
         // starting rollout
         mvc.perform(post("/rest/v1/rollouts/{rolloutId}/start", rollout.getId()))
@@ -1252,7 +1239,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*");
 
         // resume not yet started rollout
         mvc.perform(post("/rest/v1/rollouts/{rolloutId}/resume", rollout.getId()))
@@ -1272,7 +1259,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 2, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 2, dsA, "controllerId==rollout*");
 
         // starting rollout
         mvc.perform(post("/rest/v1/rollouts/{rolloutId}/start", rollout.getId()))
@@ -1313,8 +1300,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
 
         // create rollout including the created targets with prefix 'rollout'
         final Rollout rollout = rolloutManagement.create(
-                entityFactory.rollout().create().name("rollout1").distributionSetId(dsA.getId())
-                        .targetFilterQuery("controllerId==rollout*"),
+                Create.builder().name("rollout1").distributionSet(dsA).targetFilterQuery("controllerId==rollout*").build(),
                 4, confirmationRequired, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -1339,7 +1325,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 2, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 2, dsA, "controllerId==rollout*");
 
         final RolloutGroup firstGroup = rolloutGroupManagement
                 .findByRollout(rollout.getId(), PageRequest.of(0, 1, Direction.ASC, "id")).getContent().get(0);
@@ -1366,7 +1352,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 2, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 2, dsA, "controllerId==rollout*");
 
         final RolloutGroup firstGroup = rolloutGroupManagement
                 .findByRollout(rollout.getId(), PageRequest.of(0, 1, Direction.ASC, "id")).getContent().get(0);
@@ -1396,7 +1382,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 2, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 2, dsA, "controllerId==rollout*");
 
         rolloutManagement.start(rollout.getId());
 
@@ -1428,7 +1414,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*");
 
         // starting rollout
         mvc.perform(post("/rest/v1/rollouts/{rolloutId}/start", rollout.getId()))
@@ -1452,7 +1438,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rolloutDelete", 4, dsA.getId(), "controllerId==rolloutDelete*");
+        final Rollout rollout = createRollout("rolloutDelete", 4, dsA, "controllerId==rolloutDelete*");
 
         mvc.perform(delete("/rest/v1/rollouts/{rolloutid}", rollout.getId()))
                 .andDo(MockMvcResultPrinter.print())
@@ -1481,7 +1467,6 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
      */
     @Test
     void getRolloutWithRSQLParam() throws Exception {
-
         final int amountTargetsRollout1 = 25;
         final int amountTargetsRollout2 = 25;
         final int amountTargetsRollout3 = 25;
@@ -1490,12 +1475,12 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         testdataFactory.createTargets(amountTargetsRollout2, "rollout2", "rollout2");
         testdataFactory.createTargets(amountTargetsRollout3, "rollout3", "rollout3");
         testdataFactory.createTargets(amountTargetsOther, "other1", "other1");
-        final DistributionSet dsA = testdataFactory.createDistributionSet("");
+        final DistributionSet dsA = testdataFactory.createDistributionSetLocked("");
 
-        createRollout("rollout1", 5, dsA.getId(), "controllerId==rollout1*");
-        final Rollout rollout2 = createRollout("rollout2", 5, dsA.getId(), "controllerId==rollout2*");
-        createRollout("rollout3", 5, dsA.getId(), "controllerId==rollout3*");
-        createRollout("other1", 5, dsA.getId(), "controllerId==other1*");
+        createRollout("rollout1", 5, dsA, "controllerId==rollout1*");
+        final Rollout rollout2 = createRollout("rollout2", 5, dsA, "controllerId==rollout2*");
+        createRollout("rollout3", 5, dsA, "controllerId==rollout3*");
+        createRollout("other1", 5, dsA, "controllerId==other1*");
 
         mvc.perform(get("/rest/v1/rollouts").param(MgmtRestConstants.REQUEST_PARAMETER_SEARCH, "name==*2")
                         .accept(MediaType.APPLICATION_JSON))
@@ -1535,7 +1520,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // create rollout including the created targets with prefix 'rollout'
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*");
 
         // retrieve rollout groups from created rollout
         mvc.perform(get("/rest/v1/rollouts/{rolloutId}/deploygroups", rollout.getId())
@@ -1580,8 +1565,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
 
         // create a running rollout for the created targets
         final Rollout rollout = rolloutManagement.create(
-                entityFactory.rollout().create().name("rollout1").distributionSetId(dsA.getId())
-                        .targetFilterQuery("controllerId==rollout*"),
+                Create.builder().name("rollout1").distributionSet(dsA).targetFilterQuery("controllerId==rollout*").build(),
                 4, false, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -1667,7 +1651,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         testdataFactory.createTargets(amountTargets, "rollout", "rollout");
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
-        final Rollout rollout = createRollout("rollout1", 4, dsA.getId(), "controllerId==rollout*");
+        final Rollout rollout = createRollout("rollout1", 4, dsA, "controllerId==rollout*");
         rolloutManagement.start(rollout.getId());
         rolloutHandler.handleAll();
 
@@ -1691,7 +1675,7 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
         // CREATING state
-        final Rollout rollout = createRollout("rollout1", 3, dsA.getId(), "controllerId==rollout*", false);
+        final Rollout rollout = createRollout("rollout1", 3, dsA, "controllerId==rollout*", false);
         triggerNextGroupAndExpect(rollout, status().isBadRequest());
 
         // READY state
@@ -1720,7 +1704,6 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
         setTargetsStatus(targets, Status.FINISHED);
         rolloutHandler.handleAll();
         triggerNextGroupAndExpect(rollout, status().isBadRequest());
-
     }
 
     private static Stream<Arguments> confirmationOptions() {
@@ -1923,8 +1906,10 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
     }
 
     private static final Duration ROLLOUT_AT_LEAST = Duration.ofMillis(Integer.getInteger("hawkbit.it.rest.await.rolloutAtLeastMs", 50));
-    private static final Duration ROLLOUT_POLL_INTERVAL = Duration.ofMillis(Integer.getInteger("hawkbit.it.rest.await.rolloutPollIntervalMs", 100));
+    private static final Duration ROLLOUT_POLL_INTERVAL = Duration.ofMillis(
+            Integer.getInteger("hawkbit.it.rest.await.rolloutPollIntervalMs", 100));
     private static final Duration ROLLOUT_TIMEOUT = Duration.ofMillis(Integer.getInteger("hawkbit.it.rest.await.rolloutTimeoutMs", 60_000));
+
     private ConditionFactory awaitRollout() {
         return Awaitility.await().atLeast(ROLLOUT_AT_LEAST).pollInterval(ROLLOUT_POLL_INTERVAL).atMost(ROLLOUT_TIMEOUT);
     }
@@ -1987,15 +1972,16 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
                         "$._links.groups.href", allOf(startsWith(HREF_ROLLOUT_PREFIX), containsString("/deploygroups"))));
     }
 
-    private Rollout createRollout(final String name, final int amountGroups, final long distributionSetId,
-            final String targetFilterQuery) {
-        return createRollout(name, amountGroups, distributionSetId, targetFilterQuery, false);
+    private Rollout createRollout(
+            final String name, final int amountGroups, final DistributionSet distributionSet, final String targetFilterQuery) {
+        return createRollout(name, amountGroups, distributionSet, targetFilterQuery, false);
     }
 
-    private Rollout createRollout(final String name, final int amountGroups, final long distributionSetId,
-            final String targetFilterQuery, final boolean confirmationRequired) {
+    private Rollout createRollout(
+            final String name, final int amountGroups, final DistributionSet distributionSet, final String targetFilterQuery,
+            final boolean confirmationRequired) {
         final Rollout rollout = rolloutManagement.create(
-                entityFactory.rollout().create().name(name).distributionSetId(distributionSetId).targetFilterQuery(targetFilterQuery),
+                Create.builder().name(name).distributionSet(distributionSet).targetFilterQuery(targetFilterQuery).build(),
                 amountGroups, confirmationRequired, new RolloutGroupConditionBuilder().withDefaults()
                         .successCondition(RolloutGroupSuccessCondition.THRESHOLD, "100").build());
 
@@ -2013,10 +1999,8 @@ class MgmtRolloutResourceTest extends AbstractManagementApiIntegrationTest {
 
     private void setTargetsStatus(final List<Target> targets, final Status status) {
         for (final Target target : targets) {
-            final Long action = deploymentManagement.findActionsByTarget(target.getControllerId(), PAGE).toList().get(0)
-                    .getId();
-            controllerManagement
-                    .addUpdateActionStatus(entityFactory.actionStatus().create(action).status(status).message("test"));
+            final Long action = deploymentManagement.findActionsByTarget(target.getControllerId(), PAGE).toList().get(0).getId();
+            controllerManagement.addUpdateActionStatus(entityFactory.actionStatus().create(action).status(status).message("test"));
         }
     }
 
